<resources>
    <string name="app_name">Epicture</string>
    <string name="home">Home</string>
    <string name="upload">Upload</string>
    <string name="profile">Profile</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="langue">Language</string>
    <string name="francais">French</string>
    <string name="anglais">English</string>
    <string name="connection">Connect</string>
    <string name="pseudo">Pseudo</string>
    <string name="description">Description</string>
    <string name="point_text">Points:</string>
    <string name="point_nb">0</string>
    <string name="reputation_text">Reputation:</string>
    <string name="reputation_nb">neutral</string>
    <string name="search">Search</string>
    <string name="title">Title</string>
    <string name="points">Points</string>
    <string name="reputation">Reputation</string>
    <string name="edit">Edit Profile</string>
    <string name="sync_title">jg est une grosse pute</string>
    <string name="done">Done</string>
    <string name="name">Name</string>
    <string name="bio">Bio</string>
    <string name="logout">Log out</string>
    <string name="section">Section</string>
    <string name="sort">Sort</string>
    <string name="time">Time</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="all">All</string>
</resources>