<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation.xml"
    app:startDestination="@+id/navigation_profile">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.epicture.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_upload"
        android:name="com.example.epicture.ui.upload.UploadFragment"
        android:label="@string/upload"
        tools:layout="@layout/fragment_upload" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.epicture.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>