<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121212">

    <TextView
        android:id="@+id/usernameDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/pseudo"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/buttonSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:tint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.997"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056"
        app:srcCompat="@drawable/ic_settings" />

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="286dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="0dp"
        android:text="@string/description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameDisplay"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:layout_width="411dp"
        android:layout_height="0.05dp"
        android:layout_marginTop="12dp"
        android:background="#CDB3B3B3"
        android:backgroundTint="#CBB3B3B3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_edit" />

    <ImageButton
        android:id="@+id/backgroundButtonMyPicture"
        style="str"
        android:layout_width="205dp"
        android:layout_height="40dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/corner"
        android:backgroundTint="#00FFFFFF"
        android:tint="#00FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_edit" />

    <ImageButton
        android:id="@+id/backgroundButtonLikedPicture"
        android:layout_width="205dp"
        android:layout_height="40dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/corner"
        android:backgroundTint="#00FFFFFF"
        android:tint="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_edit" />


    <ImageButton
        android:id="@+id/myPictureButton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="16dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#00FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_edit"
        app:srcCompat="@drawable/ic_person" />

    <ImageButton
        android:id="@+id/likedPicture"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="188dp"
        android:layout_marginTop="16dp"
        android:background="#FFFFFF"
        android:backgroundTint="#00FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/myPictureButton"
        app:layout_constraintTop_toBottomOf="@+id/button_edit"
        app:srcCompat="@drawable/ic_like_complete" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        app:cardCornerRadius="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/userProfileImage"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:background="@drawable/circle"
            app:srcCompat="@drawable/ic_launcher_background" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/pointsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/point_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toEndOf="@+id/card_view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.055" />

    <TextView
        android:id="@+id/points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/points"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toEndOf="@+id/card_view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081" />

    <TextView
        android:id="@+id/reputationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="77dp"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="5dp"
        android:text="@string/reputation_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonSetting"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/pointsText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056" />

    <TextView
        android:id="@+id/reputation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="77dp"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="5dp"
        android:text="@string/reputation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonSetting"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/pointsText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backgroundButtonMyPicture">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/imageList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#0B0B0B" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <Button
        android:id="@+id/button_edit"
        android:layout_width="369dp"
        android:layout_height="38dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/button_bordered"
        android:text="@string/edit"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionText"
        app:layout_constraintVertical_bias="0.007" />


</androidx.constraintlayout.widget.ConstraintLayout>