<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refreshLayout2"
        android:layout_width="395dp"
        android:layout_height="335dp"
        android:layout_marginTop="44dp"
        android:foregroundGravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

        <ImageButton
            android:id="@+id/select_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#00FFFFFF"
            android:tint="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_upload" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <ImageView
        android:id="@+id/selected_image"
        android:layout_width="match_parent"
        android:layout_height="334dp"
        android:layout_marginTop="232dp"
        android:backgroundTint="#00FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/upload_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="40dp"
        android:text="@string/upload"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/refreshLayout2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="205dp"
        android:layout_height="64dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        android:maxWidth="64dp"
        app:helperTextEnabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/upload_title"
            android:layout_width="203dp"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:inputType="text"
            android:text=""
            android:textAlignment="center" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="369dp"
        android:layout_height="57dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="124dp"
        android:maxWidth="57dp"
        app:layout_constraintBottom_toTopOf="@+id/selected_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.117">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/upload_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:textAlignment="center" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>